# gamepp

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: camera.hpp.6BF2112301FCF3FA.idx  image.cpp.906B5462DAB71A8E.idx  image.hpp.CE7A0BD3E3606CD3.idx  instanced.cpp.B9E485913D5F85C3.idx  instanced.hpp.F852195AC7E6BEEA.idx  main.cpp.EAD2F94ACC4A3AC3.idx  rect.hpp.8A83F0C4DB7AFAA7.idx  shader.cpp.15C9D9C69ADF3620.idx  shader.hpp.2E63361A408543C0.idx  shaders.hpp.349CC5E4365F3C0D.idx  shaders.hpp.F70CD0B77E08D14E.idx  sprite.cpp.91B5ACF9C5A38804.idx  sprite.hpp.55B6ACD9EE610B0D.idx  stb_image.h.13B1B1EF7032E00A.idx  test.cpp.FCFF04516DD2DECB.idx  test.hpp.3AE0990FABFD0746.idx  texture.cpp.2F8EEAD17E4E9704.idx  texture.hpp.DD0F4858F25D3127.idx  vao.hpp.99570461401C0765.idx  vbo.cpp.26E79EFF7AF8E465.idx  vbo.hpp.7E4CFB3DFAC14D1D.idx  window.hpp.D014EEDD4BAE005E.idx
assets/shaders/: main.frag.glsl  main.vert.glsl  test.glsl
src/: main.cpp  testing.cpp  testing.hpp  testing_layer.hpp
src/graphics/: pipeline.hpp  test.cpp  test.hpp  window.hpp
src/graphics/camera/: camera.hpp
src/graphics/objects/: instanced.cpp  instanced.hpp  newidea.hpp  newidea2.cpp  newidea2.hpp  rect.hpp  renderable.hpp  sprite.cpp  sprite.hpp  vao.hpp  vbo.cpp  vbo.hpp
src/graphics/shaders/: shader.cpp  shader.hpp  shaders.hpp
src/graphics/textures/: texture.cpp  texture.hpp
src/io/: assets.hpp  files.cpp  files.hpp
src/stb/: image.cpp  image.hpp
